--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,7 +7,7 @@
 
     <!-- Google Fonts -->
     <!-- Swap out "Roboto" for the font(s) you want to use -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway|PT+Sans+Caption:wght@700|Roboto&display=swap" rel="stylesheet">
     
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" crossorigin="anonymous">
@@ -18,9 +18,39 @@
     <!-- Your own CSS -->
     <link rel="stylesheet" href="/styles.css">
 
-    <title>Hello world!</title>
+    <title>I need help moving out!</title>
   </head>
   <body>
+
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container">    
+            <a class="navbar-brand" href="/">
+            Help me move out!
+            </a>
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="button1 nav-link" href="/locations">How to help<span class="sr-only">(current)</span></a></li>
+          </ul>
+          <% if @current_user %>
+            <ul class="navbar-nav ml-auto">
+                        <li class="navbar-text">
+                            Logged in as <%= @current_user[:name] %>
+                        </li>
+                        <li class="button1 nav-item">
+                            <a href="/logout" class="nav-link">Logout</a>
+                        </li>
+            </ul>
+            <% else %>
+            <ul class="navbar-nav ml-auto">
+                        <li class="button1 navbar-item">
+                            <a class="button1 nav-link" href="/users/new">Sign up</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="button1 nav-link" href="/logins/new">Sign in</a>
+                        </li>
+          <% end %>
+        </div>
+    </nav>
 
     <div class="container mt-5">
       <%= yield %>
