--- a/views/logout.erb
+++ b/views/logout.erb
@@ -1,2 +1,2 @@
 <h1>You have been signed out</h1>
-<p><a href="/" class="btn btn-primary">Go Home</a></p>
+<p><a href="/" class="btn btn-primary">Back to Homepage</a></p>
